# snoop

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: cfg.rs  disassemble.rs  functions.rs  graph.rs  instructions.rs  mod.rs
src/utils/: assert_asm_extension.rs  check_valid_path.rs  find_root.rs  mod.rs
