[package]
name = "snoop"
authors = ["Joey Meere <joey@sqds.io>"]
description = "A tool suite for inspecting Solana programs"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
solana_rbpf = "0.8.5"
graphviz-rust = "0.9.0"
